--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -9,18 +9,26 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="/shopping-cart">Shopping Cart</a>
         </li>
-        <li ngbDropdown class="nav-item dropdown">
+
+        <ng-template #anonymousUser>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/login">Login</a>
+          </li>
+        </ng-template>
+
+        <li *ngIf="auth.user$ | async as user; else anonymousUser" ngbDropdown class="nav-item dropdown">
           <a ngbDropdownToggle class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Username
+            {{ user.displayName }} <!-- stampo il nome dello user che si è loggato -->
           </a>
           <div ngbDropdownMenu class="dropdown-menu" href="#" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" routerLink="/my/orders">My Orders</a>
             <a class="dropdown-item" routerLink="/admin/orders">Manage Orders</a>
             <a class="dropdown-item" routerLink="/admin/products">Manage Products</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item">Log out</a>
+            <a class="dropdown-item" (click)="logout()">Log out</a>
           </div>
         </li>
+
       </ul>
       <form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
