--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -16,14 +16,18 @@
           </li>
         </ng-template>
 
-        <li *ngIf="auth.user$ | async as user; else anonymousUser" ngbDropdown class="nav-item dropdown">
+        <li *ngIf="appUser; else anonymousUser" ngbDropdown class="nav-item dropdown">
           <a ngbDropdownToggle class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            {{ user.displayName }} <!-- stampo il nome dello user che si è loggato -->
+            {{ appUser.name }} <!-- stampo il nome dello user che si è loggato -->
           </a>
           <div ngbDropdownMenu class="dropdown-menu" href="#" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" routerLink="/my/orders">My Orders</a>
-            <a class="dropdown-item" routerLink="/admin/orders">Manage Orders</a>
-            <a class="dropdown-item" routerLink="/admin/products">Manage Products</a>
+
+            <ng-container *ngIf="appUser.isAdmin">
+              <a class="dropdown-item" routerLink="/admin/orders">Manage Orders</a>
+              <a class="dropdown-item" routerLink="/admin/products">Manage Products</a>
+            </ng-container>
+          
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" (click)="logout()">Log out</a>
           </div>
