--- a/src/app/admin/product-form/product-form.component.html
+++ b/src/app/admin/product-form/product-form.component.html
@@ -1,30 +1,44 @@
-<form>
+<form #f="ngForm" (ngSubmit)="save(f.value)">
     <div class="form-group">
         <label for="title">Title</label>
-        <input type="text" id="title" class="form-control">
+        <input #title="ngModel" ngModel name="title" type="text" id="title" class="form-control" required>
+        <div class="alert alert-danger" *ngIf="title.touched && title.invalid">
+            Title is required.
+        </div>
     </div>
     <div class="form-group">
         <label for="price">Price</label>
         <div class="input-group">
             <div class="input-group-prepend">
                 <span class="input-group-text">$</span>
-                <input type="number" id="price" class="form-control">
+                <input #price="ngModel" ngModel name="price" type="number" id="price" class="form-control" required [min]="0">
             </div>
+        </div>
+        <div class="alert alert-danger" *ngIf="price.touched && price.invalid">
+            <div *ngIf="price.errors.min">Price should be 0 or higer.</div>
+            <div *ngIf="price.errors.required">Price is required.</div>
         </div>
     </div>
 
     <div class="form-group">
         <label for="category">Category</label>
-        <select id="category" class="form-control">
+        <select #category="ngModel" #category="ngModel" ngModel name="category" id="category" class="form-control" required>
             <option value=""></option>
             <option *ngFor="let c of categories$ | async" [value]="c.$key">
                 {{c.name}}
             </option>
-        </select>    
+        </select>
+        <div class="alert alert-danger" *ngIf="category.touched && category.invalid">
+            Category is required.
+        </div>    
     </div>
     <div class="form-group">
         <label for="imageUrl">Image Url</label>
-        <input type="text" id="imageUrl" class="form-control">
+        <input #imageUrl="ngModel" ngModel name="imageUrl" type="text" id="imageUrl" class="form-control" required url>
+        <div class="alert alert-danger" *ngIf="imageUrl.touched && imageUrl.invalid">
+            <div *ngIf="imageUrl.errors.url">Please enter a valid URL.</div>
+            <div *ngIf="imageUrl.errors.required">Image URL is required.</div>
+        </div>
     </div>
 
    <button class="btn btn-primary">Save</button>
