--- a/src/app/admin/product-form/product-form.component.html
+++ b/src/app/admin/product-form/product-form.component.html
@@ -1,48 +1,65 @@
-<form #f="ngForm" (ngSubmit)="save(f.value)">
-    <div class="form-group">
-        <label for="title">Title</label>
-        <input #title="ngModel" ngModel name="title" type="text" id="title" class="form-control" required>
-        <div class="alert alert-danger" *ngIf="title.touched && title.invalid">
-            Title is required.
-        </div>
-    </div>
-    <div class="form-group">
-        <label for="price">Price</label>
-        <div class="input-group">
-            <div class="input-group-prepend">
-                <span class="input-group-text">$</span>
-                <input #price="ngModel" ngModel name="price" type="number" id="price" class="form-control" required [min]="0">
+<div class="row">
+    
+    <div class="col-md-6">
+        <form #f="ngForm" (ngSubmit)="save(f.value)">
+            <div class="form-group">
+                <label for="title">Title</label>
+                <input type="text" #title="ngModel" [(ngModel)]="product.title" name="title" id="title" class="form-control" required>
+                <div class="alert alert-danger" *ngIf="title.touched && title.invalid">
+                    Title is required.
+                </div>
             </div>
-        </div>
-        <div class="alert alert-danger" *ngIf="price.touched && price.invalid">
-            <div *ngIf="price.errors.min">Price should be 0 or higer.</div>
-            <div *ngIf="price.errors.required">Price is required.</div>
-        </div>
+            <div class="form-group">
+                <label for="price">Price</label>
+                <div class="input-group">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">$</span>
+                        <input #price="ngModel" [(ngModel)]="product.price" name="price" type="number" id="price" class="form-control" required [min]="0">
+                    </div>
+                </div>
+                <div class="alert alert-danger" *ngIf="price.touched && price.invalid">
+                    <div *ngIf="price.errors.min">Price should be 0 or higer.</div>
+                    <div *ngIf="price.errors.required">Price is required.</div>
+                </div>
+            </div>
+        
+            <div class="form-group">
+                <label for="category">Category</label>
+                <select #category="ngModel" #category="ngModel" [(ngModel)]="product.category" name="category" id="category" class="form-control" required>
+                    <option value=""></option>
+                    <option *ngFor="let c of categories$ | async" [value]="c.$key">
+                        {{c.name}}
+                    </option>
+                </select>
+                <div class="alert alert-danger" *ngIf="category.touched && category.invalid">
+                    Category is required.
+                </div>    
+            </div>
+            <div class="form-group">
+                <label for="imageUrl">Image Url</label>
+                <input #imageUrl="ngModel" [(ngModel)]="product.imageUrl" name="imageUrl" type="text" id="imageUrl" class="form-control" required url>
+                <div class="alert alert-danger" *ngIf="imageUrl.touched && imageUrl.invalid">
+                    <div *ngIf="imageUrl.errors.url">Please enter a valid URL.</div>
+                    <div *ngIf="imageUrl.errors.required">Image URL is required.</div>
+                </div>
+            </div>
+        
+           <button class="btn btn-primary">Save</button>
+      
+        </form>
     </div>
 
-    <div class="form-group">
-        <label for="category">Category</label>
-        <select #category="ngModel" #category="ngModel" ngModel name="category" id="category" class="form-control" required>
-            <option value=""></option>
-            <option *ngFor="let c of categories$ | async" [value]="c.$key">
-                {{c.name}}
-            </option>
-        </select>
-        <div class="alert alert-danger" *ngIf="category.touched && category.invalid">
-            Category is required.
-        </div>    
-    </div>
-    <div class="form-group">
-        <label for="imageUrl">Image Url</label>
-        <input #imageUrl="ngModel" ngModel name="imageUrl" type="text" id="imageUrl" class="form-control" required url>
-        <div class="alert alert-danger" *ngIf="imageUrl.touched && imageUrl.invalid">
-            <div *ngIf="imageUrl.errors.url">Please enter a valid URL.</div>
-            <div *ngIf="imageUrl.errors.required">Image URL is required.</div>
-        </div>
-    </div>
+    <div class="col-md-6">
+        <div class="card" style="width: 18rem;">
+            <img class="card-img-top" [src]="product.imageUrl" *ngIf="product.imageUrl">
+            <div class="card-body">
+              <h4 class="card-title">{{ product.title }}</h4>
+              <p class="card-text">{{ product.price | currency:'USD':true}}</p>
+            </div>
+          </div>
+    </div> 
 
-   <button class="btn btn-primary">Save</button>
+</div>
 
 
 
-</form>
