--- a/src/app/admin/product-form/product-form.component.html
+++ b/src/app/admin/product-form/product-form.component.html
@@ -44,8 +44,8 @@
                 </div>
             </div>
         
-           <button class="btn btn-primary">Save</button>
-      
+            <button class="btn btn-primary m-2"> Save </button>
+            <button type="button" (click)="delete()" class="btn btn-danger"> Delete </button>
         </form>
     </div>
 
